@@ -454,6 +454,8 @@ struct fmt_main fmt_AFS = {
 			binary_hash_1,
 			binary_hash_2,
 			NULL,
+			NULL,
+			NULL,
 			NULL
 		},
 		fmt_default_salt_hash,
@@ -466,6 +468,8 @@ struct fmt_main fmt_AFS = {
 			get_hash_0,
 			get_hash_1,
 			get_hash_2,
+			NULL,
+			NULL,
 			NULL,
 			NULL
 		},
