@@ -91,6 +91,16 @@ static int binary_hash_4(void *binary)
 	return *(MD5_word *)binary & 0xFFFFF;
 }
 
+static int binary_hash_5(void *binary)
+{
+	return *(MD5_word *)binary & 0xFFFFFF;
+}
+
+static int binary_hash_6(void *binary)
+{
+	return *(MD5_word *)binary & 0x7FFFFFF;
+}
+
 static int get_hash_0(int index)
 {
 	return MD5_out[index][0] & 0xF;
@@ -114,6 +124,16 @@ static int get_hash_3(int index)
 static int get_hash_4(int index)
 {
 	return MD5_out[index][0] & 0xFFFFF;
+}
+
+static int get_hash_5(int index)
+{
+	return MD5_out[index][0] & 0xFFFFFF;
+}
+
+static int get_hash_6(int index)
+{
+	return MD5_out[index][0] & 0x7FFFFFF;
 }
 
 static int salt_hash(void *salt)
@@ -196,7 +216,9 @@ struct fmt_main fmt_MD5 = {
 			binary_hash_1,
 			binary_hash_2,
 			binary_hash_3,
-			binary_hash_4
+			binary_hash_4,
+			binary_hash_5,
+			binary_hash_6
 		},
 		salt_hash,
 		(void (*)(void *))MD5_std_set_salt,
@@ -209,7 +231,9 @@ struct fmt_main fmt_MD5 = {
 			get_hash_1,
 			get_hash_2,
 			get_hash_3,
-			get_hash_4
+			get_hash_4,
+			get_hash_5,
+			get_hash_6
 		},
 		cmp_all,
 		cmp_one,
