@@ -1,6 +1,6 @@
 /*
  * This file is part of John the Ripper password cracker,
- * Copyright (c) 1996-98,2010 by Solar Designer
+ * Copyright (c) 1996-98,2010,2011 by Solar Designer
  */
 
 #include "params.h"
@@ -10,7 +10,9 @@ int password_hash_sizes[PASSWORD_HASH_SIZES] = {
 	PASSWORD_HASH_SIZE_1,
 	PASSWORD_HASH_SIZE_2,
 	PASSWORD_HASH_SIZE_3,
-	PASSWORD_HASH_SIZE_4
+	PASSWORD_HASH_SIZE_4,
+	PASSWORD_HASH_SIZE_5,
+	PASSWORD_HASH_SIZE_6
 };
 
 int password_hash_thresholds[PASSWORD_HASH_SIZES] = {
@@ -18,5 +20,7 @@ int password_hash_thresholds[PASSWORD_HASH_SIZES] = {
 	PASSWORD_HASH_THRESHOLD_1,
 	PASSWORD_HASH_THRESHOLD_2,
 	PASSWORD_HASH_THRESHOLD_3,
-	PASSWORD_HASH_THRESHOLD_4
+	PASSWORD_HASH_THRESHOLD_4,
+	PASSWORD_HASH_THRESHOLD_5,
+	PASSWORD_HASH_THRESHOLD_6
 };
